--- a/package.json
+++ b/package.json
@@ -3,22 +3,28 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "@heroicons/react": "^2.2.0",
+    "@heroicons/react": "^2.0.18",
+    "@react-three/fiber": "^8.15.12",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "autoprefixer": "^10.4.16",
-    "framer-motion": "^10.18.0",
+    "framer-motion": "^10.16.4",
     "postcss": "^8.4.31",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
+    "react-intersection-observer": "^9.5.2",
+    "react-parallax-tilt": "^1.7.0",
     "react-pdf": "^7.3.3",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.3",
+    "react-spring": "^9.7.3",
     "react-toggle-dark-mode": "^1.1.1",
     "react-type-animation": "^3.2.0",
-    "tailwindcss": "^3.3.5"
+    "react-use": "^17.5.0",
+    "tailwindcss": "^3.3.5",
+    "three": "^0.152.2"
   },
   "scripts": {
     "start": "react-scripts start",
